tests/ui/editions/edition-imports-virtual-2015-gated.stderr
error[E0432]: unresolved import `E`
  --> $DIR/auxiliary/edition-imports-2015.rs:23:13
   |
LL | macro_rules! gen_gated { () => {
   | ---------------------- in this expansion of `gen_gated!`
...
LL |         use E::*;
   |             ^ could not find `E` in the list of imported crates
   |
  ::: $DIR/edition-imports-virtual-2015-gated.rs:8:5
   |
LL |     gen_gated!();
   |     ------------ in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
